--- a/index.html
+++ b/index.html
@@ -12,9 +12,7 @@
     <header>
         <nav>
 
-            <a href="./index.html">
-                <img src="images/WebStudio.jpg" alt="Логотип WebStudio" />
-            </a>
+            <a href="./index.html" lang="en">WebStudio</a>
 
             <ul>
                 <li> <a href="./index.html">Студія</a></li>
@@ -38,6 +36,8 @@
 
         <!-- Section 2 -->
         <section>
+            <h2 hidden>Наші переваги</h2>
+
             <ul>
                 <li>
                     <h3>Увага до деталей</h3>
@@ -63,11 +63,15 @@
         <!-- Section 3 -->
 
         <section>
+
             <h2>Чим ми займаємося</h2>
-            <img src="images/img1.jpg" alt="Робота з планшетом" width="370" />
-            <img src="images/img2.jpg" alt="Робота зі смартфоном" width="370" />
-            <img src="images/img3.jpg" alt="Палітра кольорів на планшеті" width="370" />
+
+            <li> <img src="images/img1.jpg" alt="Робота з планшетом" width="370" /></li>
+            <li> <img src="images/img2.jpg" alt="Робота зі смартфоном" width="370" /></li>
+            <li> <img src="images/img3.jpg" alt="Палітра кольорів на планшеті" width="370" /></li>
+
         </section>
+
 
         <!-- Section 4 -->
         <section>
@@ -102,9 +106,7 @@
 
     <footer>
 
-        <a href="index.html">
-            <img src="images/WebStudio.jpg" alt="Логотип WebStudio" />
-        </a>
+        <a href="./index.html" lang="en">WebStudio</a>
 
         <address>
             <ul>
